--- a/CSS/index.css
+++ b/CSS/index.css
@@ -26,6 +26,7 @@ p{
 .LogIn{
     width: 90%;
     margin-top: 10%;
+    border-style: solid;
     border-width: 5px;
     border-radius: 3px;
     border-color: #11002c;
