--- a/CSS/index.css
+++ b/CSS/index.css
@@ -31,11 +31,12 @@ p{
     border-radius: 10px;
     border-color: #11002c;
     margin-left: 5%;
+    margin-bottom: 10%;
 }
 
 .div{
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     width: 90%;
     margin-left: 5%;
 }
